fix sonar 2